<resources>
    <string name="app_name">Task Master</string>
    <string name="task_master">Task Master</string>
    <string name="my_tasks">My Tasks</string>
    <string name="button">Button</string>
    <string name="add_task">Add Task</string>
    <string name="tasksimageplaceholder">tasksImagePlaceholder</string>
    <string name="task_body">Task Body</string>
    <string name="add_a_task">Add A Task</string>
    <string name="task_name">Task Name</string>
    <string name="create_new_task">Create New Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="new_task_created">New Task Created!</string>
    <string name="task_details">Task Details</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="settings">Settings</string>
    <string name="update_username">Update Username</string>
    <string name="feed_dogs">Feed Dogs</string>
    <string name="clean_dishes">Clean Dishes</string>
    <string name="make_dinner">Make Dinner</string>
    <string name="task_state">Task State</string>
    <string name="user_s_tasks">user\'s tasks</string>
    <string name="team_name">Team Name</string>
    <string name="update_task">Update Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="save_username">Save Username</string>
    <string name="task_team">Task Team</string>
    <string name="save_user_team">Save User Team</string>
    <string name="current_team">Current Team</string>
    <string name="current_state">Current State</string>
    <string name="item_choose_file">Choose File</string>
    <string-array name="task_states_array">
        <item>New</item>
        <item>In Progress</item>
        <item>Review</item>
        <item>Complete</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_read_external_storage">Task Master requests permission to access your files</string>
    <string name="log_out">Log Out</string>
    <string name="open_file">OPEN FILE</string>
    <string name="add_team">Add Team</string>
    <string name="add_a_team">Add A Team</string>
</resources>